# pezkuwi-wallet-android

./: .gitignore  BRAND.md  CHANGELOG_PEZKUWI.md  README.md  build.gradle  gradle.properties  lint.xml  settings.gradle  version.properties
app/: .gitignore  build.gradle  develop_key.jks  google-services.json  pezkuwi_debug.jks  proguard-rules.pro
bindings/sr25519-bizinikiwi/rust/: Cargo.toml
bindings/sr25519-bizinikiwi/rust/src/: lib.rs
caip/: build.gradle
common/: build.gradle
core-api/: build.gradle
core-db/: build.gradle
docs/: PACKAGE_STRUCTURE_REBRAND.md
feature-account-api/: build.gradle
feature-account-impl/: build.gradle
feature-account-migration/: build.gradle
feature-ahm-api/: build.gradle
feature-ahm-impl/: build.gradle
feature-assets/: build.gradle
feature-banners-api/: build.gradle
feature-banners-impl/: build.gradle
feature-bridge-api/: build.gradle
feature-bridge-impl/: build.gradle
feature-buy-api/: build.gradle
feature-buy-impl/: build.gradle
feature-cloud-backup-api/: build.gradle
feature-cloud-backup-impl/: build.gradle
feature-cloud-backup-test/: build.gradle
feature-crowdloan-api/: build.gradle
feature-crowdloan-impl/: build.gradle
feature-currency-api/: build.gradle
feature-currency-impl/: build.gradle
feature-dapp-api/: build.gradle
feature-dapp-impl/: build.gradle
feature-deep-linking/: build.gradle
feature-external-sign-api/: build.gradle
feature-external-sign-impl/: build.gradle
feature-gift-api/: build.gradle
feature-gift-impl/: build.gradle
feature-governance-api/: build.gradle
(+317 files in other folders)
